syntax = "proto3";
package dev.array21.tactibetter;

message Timesheet {
  repeated NamedId departments = 1;
  repeated NamedId task_groups = 2;
  optional string noteText = 3;
  repeated TimesheetBlock blocks = 4;
}

message NamedId {
  string id = 1;
  string name = 2;
}

message TimesheetBlock {
  int64 date = 1;
  int64 begin = 2;
  int64 end = 3;
  string department = 4;
  string task = 5;
  bool submitted = 6;
  bool approved = 7;
}